--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@ Designed by Varun Soma (@forgottenhacker)
 		<section id="footer">
 			<ul class="icons">
 				<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-				<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-				<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+				<li><a href="https://www.facebook.com/Pizza-Haven-2215008208620290/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+				<li><a href="https://www.instagram.com/thepizzahaven/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 			</ul>
 			<div class="copyright">
 				<ul class="menu">
