emails in forms

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ Designed by Varun Soma (@forgottenhacker)
 						<center> <h3>Interested in Working With US?</h3> </center>
 						<br />
 					</header>
-					<form action="https://formspree.io/email@domain.tld" method="POST" />
+					<form action="https://formspree.io/somaspizzahaven@gmail.com" method="POST" />
 						<div class="row">
 							<div class="col-6 col-12-mobile">
 								<input class="text" type="text" name="name" id="name" value="" placeholder="Name" />
@@ -191,7 +191,7 @@ Designed by Varun Soma (@forgottenhacker)
 						</p>
 					</header>
 
-					<form action="https://formspree.io/email@domain.tld" method="POST" />
+					<form action="https://formspree.io/somaspizzahaven@gmail.com" method="POST" />
 						<div class="row gtr-50">
 							<div class="col-6 col-12-mobile"><input type="text" class="text" name="name" placeholder="Name" /></div>
 							<div class="col-6 col-12-mobile"><input type="text" class="text" name="email" placeholder="Return Contact Information" /></div>
